2014-11-23  Per Bothner  <per@bothner.com>

	* Path.java (search): Fix logic error.

2014-10-29  Per Bothner  <per@bothner.com>

	* InPort.java (systemInPort): Initialize to a BinaryInPort if
	we have no console.
	(noConsole): Static field moved from repl.java.
	(haveConsole): New method.

2014-10-27  Per Bothner  <per@bothner.com>

	* NBufferedInputStream.java (fillBytes): Generalize to allow
	pos to be less than limit, and thus needing to be saved.  Needed if
	we fail to decode the first byte of a mutli-byte sequence.
	* BinaryInPort.java (fill): Fix decode logic.

2014-09-28  Per Bothner  <per@bothner.com>

	* BinaryInPort.java (defaultCset): New field.
	(setDefaultCharset): New method.
	(fill): Use defaultCset.
	* Path.java (search): New method for searching using a searchpath.
	(PATH_CURRENT, PATH_RELATIV): New constants.

2014-09-17  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (finishIDHash): New convenience method.

2014-07-17  Per Bothner  <per@bothner.com>

	* InPort.java (readCodePoint): Fix bad error in handling surrogates.

2014-05-13  Per Bothner  <per@bothner.com>

	* InPort.java (systemInFilename): New constant.

2014-03-18  Per Bothner  <per@bothner.com>

	* Path.java: Moved from gnu/text.
	* FilePath.java: Likewise.
	* URIPath.java: Likewise.
	* URLPath.java: Likewise.
	* URLPath.java (classResourcePath): Moved to GetModuleClass.java.

2014-03-17  Per Bothner  <per@bothner.com>

	* NBufferedInputStream.java (<init>): Failed to set barr field to
	supplied buffer.

2014-02-23  Per Bothner  <per@bothner.com>

	* BinaryInPort.java (class BinaryInputStream): Rename to
	NBufferedInputStream and moved to separate file.
	(fill): If charset not set, defer defaulting to UTF-8 as long
	as we only see ASCII.  This allows handing encoding declarations.
	(setFromByteOrderMark): New method.
	(openHeuristicFile): New static method.
	* NBufferedInputStream.java: New file.
	Add suppot for mark/reset.

2014-02-16  Per Bothner  <per@bothner.com>
